NIFI-14104 allow setting of HTTP Request Headers for Elasticsearch requests